# NoU_AI

./: .env.example  .gitignore  README-kor.md  README.md  config.yaml  pyproject.toml
docs/: architecture-kor.md  architecture.md  comparison.md  glossary.md
examples/: basic_usage.py
localtest/: docker-compose.yml
localtest/backend/: Dockerfile  main.py  requirements.txt
localtest/frontend/: Dockerfile  app.js  index.html  nginx.conf  style.css
scripts/: extract_attack_data.py
src/nou_ai/: __init__.py  config.py  pipeline.py  types.py
src/nou_ai/counter/: __init__.py  classifier.py  engine.py  selector.py  tracker.py
src/nou_ai/counter/strategies/: __init__.py  base.py  context_poison.py  fake_compliance.py  goal_hijack.py  infinite_loop.py  narrative_trap.py  resource_waste.py  token_exhaustion.py
src/nou_ai/embeddings/: faiss_index.py  model.py
src/nou_ai/patterns/: injection_patterns.py  known_attacks.json
src/nou_ai/stages/: __init__.py  base.py  embedding_stage.py  gemini_stage.py  regex_stage.py  sanitizer_stage.py
tests/: conftest.py  test_counter_engine.py  test_embedding_stage.py  test_gemini_stage.py  test_pipeline.py  test_regex_stage.py  test_sanitizer_stage.py  test_strategies.py  test_tracker.py
